plugins {
    id "java-library"
    id "com.github.johnrengelman.shadow" version "6.1.0"
}

subprojects {
    apply plugin: "java-library"
    apply plugin: "com.github.johnrengelman.shadow"

    group "me.piggypiglet"
    version "1.0.0-beta"
    sourceCompatibility = JavaVersion.VERSION_11

    compileJava.options.encoding = "UTF-8"

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly "org.jetbrains:annotations:20.1.0"
    }
}